[package]
name = "git-utils"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
git2 = { version = "0.13", default_features = false }
rayon = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
subprocess = "0.2"
structopt = "0.3"
tempfile = "3.0"
time = "0.1"
toml = "0.5"

[[bin]]
name = "label-pr"
path = "src/label-pr.rs"

[[bin]]
name = "check-pr"
path = "src/check-pr.rs"

